--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clase lunes</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
+    
 </head>
 <body>
     <h1>clase lunes</h1>
     <p>ESPERO LOGRE REALIZAR EL EJERCICIO
         GRACIAS!!!
     </p>
+    <p>lo que sea</p>
 </body>
 </html>
